(FIX) structure formatting for manual deploy on netlify

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "my-react-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
-    "start": "parcel index.html",
+    "start": "parcel src/index.html",
     "build": "parcel build --dist-dir public",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
